# bikno-terry-davis-special

./: .gitignore  CMakeLists.txt  goat.brot  goat.txt  lexer.cpp  lexer.h  main  main.cpp  parser.cpp  parser.h  test  test.cpp  test2  test2.cpp
Generation/: generation.cpp  generation.h  operators.cpp  operators.h  values.cpp  values.h
Lexer/: lexer.cpp  lexer.h
Parser/: parser.cpp  parser.h
include/: generation.h  lexer.h  operators.h  parser.h  values.h
